approval for non matic contribution added

--- a/Launchbase/Components/Layout/NavMenu.razor
+++ b/Launchbase/Components/Layout/NavMenu.razor
@@ -23,14 +23,14 @@
                     Create launchpad
                 </NavLink>
             </div>
-            <div class="w-full  flex items-center justify-le px-4">
+            @* <div class="w-full  flex items-center justify-le px-4">
                 <NavLink ActiveClass="w-full bg-nr text-white"
                          class="py-2 flex items-center gap-2 px-2 text-gray-50 rounded-md hover:text-white hover:bg-tabelle w-full"
                          style="text-decoration-line:none" href="/token">
 
                     Create token
                 </NavLink>
-            </div>
+            </div> *@
             <div class="w-full  flex items-center justify-le px-4">
                 <NavLink ActiveClass="w-full bg-nr text-white"
                          class="py-2 flex items-center gap-2 px-2 text-gray-50 rounded-md hover:text-white hover:bg-tabelle w-full"
