code cleanup has been made

--- a/Launchbase/Components/Pages/Home.razor
+++ b/Launchbase/Components/Pages/Home.razor
@@ -98,7 +98,7 @@
                 <MudGrid Spacing="4" Justify="Justify.Center">
 
                     <MudItem xs="6">
-                        <MudLink Href="#" Underline="Underline.None">
+                        <MudLink Href="https://evercraft.eco/" Underline="Underline.None">
                             <div class="mx-auto rounded-md bg-hr w-full border-1 shadow-lg text-center" style="border:1px">
                                 <div class="mt-1 w-full p-4">
                                     <div class="mt-4">
@@ -118,7 +118,7 @@
                     </MudItem>
 
                     <MudItem xs="6">
-                        <MudLink Href="#" Underline="Underline.None" >
+                        <MudLink Href="https://ecet.io/" Underline="Underline.None">
                             <div class="mx-auto rounded-md bg-hr w-full border-1 shadow-lg text-center" style="border:1px">
                                 <div class="mt-1 w-full p-4">
                                     <div class="mt-4">
